// REMEMBER: This must be run using the Gradle tas application:run

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

group 'org.ringingmaster'
version '1.0.0'

compileJava {
    sourceCompatibility = 12
    targetCompatibility = 12
}

repositories {
    mavenCentral()
}
// REMEMBER: This must be run using the Gradle tas application:run
javafx {
    version = "12"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base' ]
}

mainClassName = 'org.ringingmaster.ui.desktop.RingingMasterDesktopApp'
applicationDefaultJvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED']


dependencies {

    // Internal
    compile 'org.ringingmaster:ringingmaster-engine:1.0.0'
    compile 'org.ringingmaster:ringingmaster-util-javafx:1.0.0'

    // Spring
    compile 'org.springframework:spring-context:4.3.10.RELEASE'

    // Other
    compile 'org.controlsfx:controlsfx:11.0.0'
    compile 'org.apache.commons:commons-lang3:3.9'
    compile 'io.reactivex:rxjavafx:2.0.2'
    compile 'io.reactivex.rxjava2:rxjavafx:2.2.2'


    // Logging
    runtime 'org.apache.logging.log4j:log4j-core:2.8.2'
    runtime 'org.apache.logging.log4j:log4j-slf4j-impl:2.8.2'
    runtime 'org.apache.logging.log4j:log4j-jcl:2.8.2' //Needed for Spring

    // TEST: General
    testCompile 'junit:junit:4.12'
    testCompile 'org.mockito:mockito-core:2.8.47'

    // TEST: Logging
    testRuntime 'org.apache.logging.log4j:log4j-core:2.8.2'
    testRuntime 'org.apache.logging.log4j:log4j-slf4j-impl:2.8.2'
}
